# Spreadsheet-in-RUST

./: Cargo.toml  README.md  Specification.md
src/: cell.rs  check.rs  coordinates.rs  main.rs  rectangle.rs  rules.rs  spreadsheet.rs  test.rs
tests/auto-cycle-no-user/: data.csv  description.txt
tests/basic-cycle-no-user/: data.csv  description.txt  view.csv
tests/basic-view-auto-cycle-user/: description.txt  expected-changes.txt  user.txt
tests/basic-view-basic-user/: changes.txt  description.txt  user.txt
tests/basic-view-basic-without-changes-user/: changes.txt  description.txt  test.sh
tests/basic-view-dependencies-user/: description.txt  expected-changes.txt  user.txt  ws
tests/basic-view-formula-user/: changes.txt  description.txt  expected-view.csv  user.txt
tests/basic-view-no-user/: description.txt
tests/basic-view-wrong-formula-c2<c1-user/: changes.txt  description.txt  expected-changes.txt  user.txt  view.csv
tests/basic-view-wrong-formula-no-area-user/: description.txt  expected-changes.txt  user.txt
tests/basic-view-wrong-formula-r2<r1-user/: changes.txt  description.txt  expected-changes.txt  user.txt
tests/fat-dependencies-basic-user/: description.txt  expected-changes.txt
tests/fat-dependencies-fat-cycle/: changes.txt  data.csv  description.txt  user.txt
tests/formula-dependencies-no-user/: data.csv  description.txt  expected-view.csv
tests/formula-more-than-255-no-user/: data.csv  description.txt  expected-view.csv  view.csv
tests/formula-view-basic-user/: description.txt  expected-changes.txt
(+32 files in other folders)
