[package]
name = "defi2"
version = "0.1.0"
authors = ["Gowther <simozniber2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = {version = "0.5.0", features = ["serde-1"]}
regex = "1"
lazy_static = "1.4.0"
